--- a/WhyRemitApp/WhyRemitApp/Views/Currencies/CurrenncyDetailPagexaml.xaml
+++ b/WhyRemitApp/WhyRemitApp/Views/Currencies/CurrenncyDetailPagexaml.xaml
@@ -24,8 +24,12 @@
                     <RowDefinition Height="45"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="30"/>
+                </Grid.ColumnDefinitions>
                 
-                <Grid Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" BackgroundColor="{StaticResource AppBlueColor}">
+                <Grid Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" BackgroundColor="{StaticResource AppBlueColor}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50"/>
                         <ColumnDefinition Width="*"/>
@@ -40,22 +44,28 @@
                     <Label Grid.Column="1" Text="{Binding CurrencyName}" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" FontSize="20" FontAttributes="Bold"
                        TextColor="{StaticResource AppWhiteColor}"/>
                 </Grid>
-                <Grid Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" BackgroundColor="{StaticResource AppBlueColor}">
+                <Grid Grid.Row="1" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" BackgroundColor="{StaticResource AppBlueColor}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50"/>
                         <ColumnDefinition Width="*"/> 
-                        <ColumnDefinition Width="30"/>
+                        <!--<ColumnDefinition Width="30"/>-->
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="1" Text="{Binding CreatedOn}" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" FontSize="11" 
                        TextColor="{StaticResource AppWhiteColor}"/>
                     <!--<Label Grid.Column="2" Text="{Binding CreatedOn}" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" FontSize="11" 
                        TextColor="{StaticResource AppWhiteColor}"/>-->
-                    <Grid Grid.Column="2" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand">
+                    <!--<Grid Grid.Column="2" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand">
                         <Grid.GestureRecognizers>
                             <TapGestureRecognizer Tapped="More_Tapped"/>
                         </Grid.GestureRecognizers>
                         <Image Source="more.png" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" HeightRequest="22"/>
-                    </Grid>
+                    </Grid>-->
+                </Grid>
+                <Grid Grid.Column="1" Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="More_Tapped"/>
+                    </Grid.GestureRecognizers>
+                    <Image Source="more.png" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="20"/>
                 </Grid>
             </Grid>
             <!--Rates-->
@@ -64,6 +74,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <!--Headers-->
                 <Grid Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" Padding="20,0,20,0">
@@ -83,16 +94,30 @@
                     <Label Grid.Column="0" Text="{Binding BestRate}" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" FontSize="18" TextColor="{StaticResource AppBlackColor}"/>
                     <Label Grid.Column="1" Text="{Binding MinRate}" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" FontSize="18" TextColor="{StaticResource AppBlackColor}"/>
                 </Grid>
-
+                <Grid Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand" Padding="20,0,20,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="1" HorizontalOptions="EndAndExpand" VerticalOptions="FillAndExpand">
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="ChangeRate_Tapped"/>
+                        </Grid.GestureRecognizers>
+                        <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" Spacing="0">
+                            <Label Text="{Binding ChangeRate}" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" FontSize="12" TextColor="{StaticResource AppBlueColor}"/>
+                            <BoxView HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="{StaticResource AppBlueColor}"/>
+                        </StackLayout>
+                    </Grid>
+                </Grid>
             </Grid>
             <BoxView Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="LightGray"/>
             <!--Matches-->
             <Label Grid.Row="4" Text="{Binding MatchesCount}" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" 
-                   TextColor="{StaticResource AppBlueColor}" FontSize="20" Margin="20,0,20,0"/>
+                   TextColor="{StaticResource AppBlueColor}" FontSize="14" Margin="20,0,20,0"/>
 
             <!--Matches List-->
             <!--<ScrollView Grid.Row="5" HorizontalOptions="StartAndExpand" VerticalOptions="FillAndExpand" VerticalScrollBarVisibility="Never" IsClippedToBounds="True">-->
-            <Grid Grid.Row="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="20,0,20,10">
+            <Grid Grid.Row="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="20,0,20,10" IsVisible="{Binding IsMatchesAvailable}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
@@ -132,16 +157,16 @@
                                             <Grid Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                                                 <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
                                                     <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="80"/>
+                                                        <ColumnDefinition Width="50"/>
                                                         <ColumnDefinition Width="*"/>
                                                         <ColumnDefinition Width="100"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <controls:CustomFrame Grid.Column="0" Padding="0" CornerRadius="10" HasShadow="False" IsClippedToBounds="True"
-                                                                           BackgroundColor="{StaticResource AppVeryLightBlueColor}" BorderColor="LightGray" HeightRequest="80">
+                                                                           BackgroundColor="{StaticResource AppVeryLightBlueColor}" BorderColor="LightGray" HeightRequest="50">
                                                         <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                                                             <Label Text="No Image" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" VerticalOptions="CenterAndExpand"
-                                                                   VerticalTextAlignment="Center" FontSize="15" Margin="5" TextColor="LightGray"/>
+                                                                   VerticalTextAlignment="Center" FontSize="10" Margin="5" TextColor="LightGray" LineBreakMode="WordWrap"/>
                                                         <Image Source="{Binding profilepic}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="Fill"/>
                                                         </Grid>
                                                     </controls:CustomFrame>
@@ -169,6 +194,10 @@
                         </SFList:SfListView>
                     </Grid>
                 </Grid>
+
+            <Grid Grid.Row="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="20,0,20,0" IsVisible="{Binding IsMatchesNotAvailable}">
+                <Label Grid.Row="1" Text="There are currently no matches." HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" LineBreakMode="WordWrap" FontSize="18" TextColor="{StaticResource AppBlackColor}"/>
+            </Grid>
             <!--</ScrollView>-->
         </Grid>
 
