--- a/WhyRemitApp/WhyRemitApp/Views/Currencies/CurrenncyDetailPagexaml.xaml
+++ b/WhyRemitApp/WhyRemitApp/Views/Currencies/CurrenncyDetailPagexaml.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:controls="clr-namespace:WhyRemitApp.CustomControls"
+             xmlns:xe="clr-namespace:XamEffects;assembly=XamEffects"
              x:Class="WhyRemitApp.Views.Currencies.CurrenncyDetailPagexaml"
              xmlns:SFList="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms">
     <ContentPage.Content>
@@ -62,10 +63,13 @@
                     </Grid>-->
                 </Grid>
                 <Grid Grid.Column="1" Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                    <Grid.GestureRecognizers>
+                    <ImageButton Source="more.png" HorizontalOptions="EndAndExpand" VerticalOptions="FillAndExpand" HeightRequest="22" WidthRequest="22" BackgroundColor="{StaticResource AppBlueColor}"
+                             Clicked="More_Tapped"/>
+
+                    <!--<Grid.GestureRecognizers>
                         <TapGestureRecognizer Tapped="More_Tapped"/>
                     </Grid.GestureRecognizers>
-                    <Image Source="more.png" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="20"/>
+                    <Image Source="more.png" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="20"/>-->
                 </Grid>
             </Grid>
             <!--Rates-->
@@ -99,10 +103,11 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <Grid Grid.Column="1" HorizontalOptions="EndAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.GestureRecognizers>
+                    <Grid Grid.Column="1" HorizontalOptions="EndAndExpand" VerticalOptions="FillAndExpand" 
+                          xe:TouchEffect.Color="{StaticResource AppLightBlueColor}" xe:Commands.Tap="{Binding ChangeRateCommand}">
+                        <!--<Grid.GestureRecognizers>
                             <TapGestureRecognizer Tapped="ChangeRate_Tapped"/>
-                        </Grid.GestureRecognizers>
+                        </Grid.GestureRecognizers>-->
                         <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" Spacing="0">
                             <Label Text="{Binding ChangeRate}" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" FontSize="12" TextColor="{StaticResource AppBlueColor}"/>
                             <BoxView HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="{StaticResource AppBlueColor}"/>
