--- a/WhyRemitApp/WhyRemitApp/Views/Currencies/EditCurrencyPage.xaml
+++ b/WhyRemitApp/WhyRemitApp/Views/Currencies/EditCurrencyPage.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             xmlns:xe="clr-namespace:XamEffects;assembly=XamEffects"
              x:Class="WhyRemitApp.Views.Currencies.EditCurrencyPage"
              xmlns:local="clr-namespace:WhyRemitApp.CustomControls">
     <ContentPage.Content>
