--- a/WhyRemitApp/WhyRemitApp/Views/Profile/ProfilePage.xaml
+++ b/WhyRemitApp/WhyRemitApp/Views/Profile/ProfilePage.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d"
              x:Class="WhyRemitApp.Views.Profile.ProfilePage"
              Title="Profile"
+             xmlns:xe="clr-namespace:XamEffects;assembly=XamEffects"
              xmlns:local="clr-namespace:WhyRemitApp.CustomControls">
     <ContentPage.Content>
         <!--Main Grid-->
@@ -73,7 +74,7 @@
                             </Grid.ColumnDefinitions>
                             <Image Grid.Column="0" Source="user_blue.png" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="20" WidthRequest="20"/>
                             <local:CustomEntry Grid.Column="1" Text="{Binding DisplayName}" Placeholder="DisplayName" TextColor="Black" 
-                                   PlaceholderColor="{StaticResource AppDarkGrayColor}" FontSize="15" MaxLength="50"/>
+                                  x:Name="TxtDisplayName" TextChanged="TxtDisplayName_TextChanged" PlaceholderColor="{StaticResource AppDarkGrayColor}" FontSize="15" MaxLength="50"/>
                         </Grid>
                         <!--Seperator-->
                         <BoxView Grid.Row="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="{StaticResource AppGrayColor}"/>
@@ -106,11 +107,9 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Grid Grid.Column="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding CurrencyCommand}"/>
-                        </Grid.GestureRecognizers>
-                        <Grid.RowDefinitions>
+                    <Grid Grid.Column="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2"
+                           xe:TouchEffect.Color="{StaticResource AppLightBlueColor}" xe:Commands.Tap="{Binding CurrencyCommand}">
+                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
@@ -118,7 +117,8 @@
                         <Label Grid.Row="1" Text="Exchange" FontSize="12" FontAttributes="Bold" HorizontalTextAlignment="Center"
                            TextColor="Gray" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
                     </Grid>
-                    <Grid Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2">
+                    <Grid Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2"
+                         xe:TouchEffect.Color="{StaticResource AppLightBlueColor}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="Auto"/>
@@ -127,11 +127,9 @@
                         <Label Grid.Row="1" Text="Profile" FontSize="12" FontAttributes="Bold" HorizontalTextAlignment="Center"
                            TextColor="{StaticResource AppBlueColor}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
                     </Grid>
-                    <Grid Grid.Column="2" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding SettingCommand}"/>
-                        </Grid.GestureRecognizers>
-                        <Grid.RowDefinitions>
+                    <Grid Grid.Column="2" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2"
+                           xe:TouchEffect.Color="{StaticResource AppLightBlueColor}" xe:Commands.Tap="{Binding SettingCommand}">
+                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
