--- a/WhyRemitApp/WhyRemitApp/Views/Register/RegistrationPage.xaml
+++ b/WhyRemitApp/WhyRemitApp/Views/Register/RegistrationPage.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d" IsEnabled="{Binding IsPageEnabled}"
              x:Class="WhyRemitApp.Views.Register.RegistrationPage"
              xmlns:local="clr-namespace:WhyRemitApp.CustomControls"
+             xmlns:xe="clr-namespace:XamEffects;assembly=XamEffects"
              xmlns:inputKit="clr-namespace:Plugin.InputKit.Shared;assembly=Plugin.InputKit">
     <ContentPage.Content>
         <!--Main Grid-->
@@ -34,18 +35,19 @@
                 <Label Grid.Row="0" Text="Registration" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand"
                                                TextColor="White" FontSize="22" FontAttributes="Bold"/>
 
-                <local:CustomEntry Grid.Row="1" Text="{Binding DisplayName}" Placeholder="Display Name" TextColor="White"
-                                   PlaceholderColor="WhiteSmoke" FontSize="15" MaxLength="50"/>
+                <local:CustomEntry x:Name="TxtDisplayName" Grid.Row="1" Text="{Binding DisplayName}" Placeholder="Display Name" TextColor="White"
+                                   PlaceholderColor="WhiteSmoke" FontSize="15" MaxLength="50" TextChanged="TxtDisplayName_TextChanged"/>
 
                 <BoxView Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="White"/>
                 <Label Grid.Row="3" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" FontSize="12" Margin="0,10,0,0"
                        Text="This is your display name that will be visible to other members" TextColor="{StaticResource AppLightBlueColor}"/>
 
                 <!--Country Picker-->
-                <Grid Grid.Row="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" ColumnSpacing="15">
-                    <Grid.GestureRecognizers>
+                <Grid Grid.Row="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" 
+                      ColumnSpacing="15" xe:TouchEffect.Color="{StaticResource AppLightBlueColor}" xe:Commands.Tap="{Binding OpenCountryPickerCommand}"> 
+                    <!--<Grid.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding OpenCountryPickerCommand}"/>
-                    </Grid.GestureRecognizers>
+                    </Grid.GestureRecognizers>-->
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="35"/>
                         <ColumnDefinition Width="*"/>
@@ -81,7 +83,7 @@
                             <RowDefinition Height="1"/>
                         </Grid.RowDefinitions>
                         <local:CustomEntry Grid.Row="0" Text="{Binding Mobileno}" Placeholder="Mobile Number" TextColor="White"
-                                   PlaceholderColor="WhiteSmoke" FontSize="15" Keyboard="Numeric"/>
+                                   PlaceholderColor="WhiteSmoke" FontSize="15" Keyboard="Telephone" MaxLength="15"/>
                         <BoxView Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="White"/>
                     </Grid>
                 </Grid>
