--- a/WhyRemitApp/WhyRemitApp/Views/Settings/SettingsPage.xaml
+++ b/WhyRemitApp/WhyRemitApp/Views/Settings/SettingsPage.xaml
@@ -43,7 +43,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Image Grid.Column="0" Source="Setting_blue.png" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand"/>
-                        <Label Grid.Column="1" Text="{Binding Version}" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" FontSize="15" />
+                        <Label Grid.Column="1" x:Name="LblVersion" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" FontSize="15" />
                     </Grid>
                     <!--Notification Settings-->
                     <Grid Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="10,0,0,0">
@@ -122,7 +122,7 @@
                                     <ColumnDefinition Width="32"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Source="File_blue.png" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="20" WidthRequest="20"/>
+                                <Image Grid.Column="0" Source="feedback.png" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="20" WidthRequest="20"/>
                                 <Label Grid.Column="1" Text="Feedback" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" FontSize="15" />
                             </Grid>
                         </Frame>
@@ -175,10 +175,8 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Grid Grid.Column="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding CurrencyCommand}"/>
-                        </Grid.GestureRecognizers>
+                    <Grid Grid.Column="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2"
+                          xe:TouchEffect.Color="{StaticResource AppLightBlueColor}" xe:Commands.Tap="{Binding CurrencyCommand}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="Auto"/>
@@ -187,10 +185,8 @@
                         <Label Grid.Row="1" Text="Exchange" FontSize="12" FontAttributes="Bold" HorizontalTextAlignment="Center"
                            TextColor="Gray" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
                     </Grid>
-                    <Grid Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ProfileCommand}"/>
-                        </Grid.GestureRecognizers>
+                    <Grid Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2"
+                          xe:TouchEffect.Color="{StaticResource AppLightBlueColor}" xe:Commands.Tap="{Binding ProfileCommand}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="Auto"/>
@@ -199,7 +195,8 @@
                         <Label Grid.Row="1" Text="Profile" FontSize="12" FontAttributes="Bold" HorizontalTextAlignment="Center"
                            TextColor="Gray" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
                     </Grid>
-                    <Grid Grid.Column="2" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2">
+                    <Grid Grid.Column="2" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" RowSpacing="2"
+                          xe:TouchEffect.Color="{StaticResource AppLightBlueColor}" xe:Commands.Tap="{Binding SettingCommand}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="Auto"/>
